2003-07-21  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/playoff/Playoff.java (insertBye): 
	Always use the tournament from the database. (707887)

	* src/fll/ScoreStandardization.java (setSubjectiveScoreGroups):
	Always use the tournament from the database. (707887)

2003-07-20  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (getNextRunNumber): Always use the
	tournament from the database. (707887)

	* web/scoreEntry/scoreEntry.jsp: Always use the tournament from
	the database. (707887)

	* web/admin/index.jsp: Added link to add tournaments for each
	region in the teams table. (766898)

	* src/fll/Queries.java (insertTournamentsForRegions): Added
	ability to add tournaments for each region in the teams table. (766898) 

	* web/playoff/remoteControlBrackets.jsp: Reworked to always
	recompute the teams and don't use session variables.  This makes
	sure we don't have caching problems. (707839)

	* web/playoff/adminbrackets.jsp: Reworked to always recompute the
	teams and allow the run number to advance to to be passed in as a
	parameter.  This should fix the problems with refresh and
	advancement of rounds. (707838)

2003-07-19  Jon Schewe  <jpschewe@mtu.net>

	* web/report/summarizePhase1.jsp: Modified query to group by
	ScoreGroup and Category.  (707841)

2003-07-16  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/GenerateDB.java (generateDB): varchar fields are
	limited to 255 characters.

2003-07-06  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/GenerateDB.java (generateDB): Make division a string
	rather than a number (707893)

	* build.xml: the compile.jsp task is broken again, so I've taken
	it out of the build.  Gonna have to fix it again later.

	* web/admin/editTeam.jsp: Added support for moving teams from one
	tournament to the next (707876).  
	Continued cleanup by adding JSTL tags.

	* scripts/convertTournaments.sql:  I think I've got all of the
	table changes in now for hierarchial tournaments (707876), along